--- a/04_Classification_Model_Evaluation.ipynb
+++ b/04_Classification_Model_Evaluation.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "dkPOEkKo2u1y",
         "colab": {
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "iT2IXhnh2u1z",
         "colab": {
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "y8n6_Xtl2u10",
         "colab": {
@@ -585,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "n27NRKzT2u11",
         "colab": {
@@ -642,7 +642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "hwNqvkfn2u11",
         "colab": {
@@ -701,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "BjYB2ulC2u12",
         "colab": {
@@ -741,7 +741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "rb09uQr52u12",
         "colab": {
@@ -857,7 +857,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "hccRvYKg2u13",
         "colab": {
@@ -905,7 +905,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "hc5yX6cH2u13",
         "colab": {
@@ -951,7 +951,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "JF998KCj2u13",
         "colab": {
@@ -1023,7 +1023,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "dkf9d1yp2u13",
         "colab": {
@@ -1059,7 +1059,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "J-k1p71B2u14",
         "colab": {
@@ -1134,7 +1134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "T5-QhpjN2u14",
         "colab": {
@@ -1170,7 +1170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "WtvJilhd2u14",
         "colab": {
@@ -1233,7 +1233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "RJ2IKVsS2u14",
         "colab": {
@@ -1288,7 +1288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "tMEA1QZ22u15",
         "colab": {
@@ -1367,7 +1367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "D2Qh8uYC2u15",
         "colab": {
@@ -1458,7 +1458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "3Tizh0mx2u15",
         "colab": {
@@ -1532,7 +1532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "QMTH9eqO2u16",
         "colab": {
@@ -1605,7 +1605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "-Kox-qmA2u16",
         "colab": {
@@ -1681,7 +1681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "Qp-HTxo42u16",
         "colab": {
@@ -1774,7 +1774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "tpLw0UWq2u17",
         "colab": {
@@ -1862,7 +1862,7 @@
         "id": "WHc4ts7Q2u17"
       },
       "source": [
-        "## Challenge: Your Turn to Practice!\n",
+        "## Challenge: Your Turn to Practice!  ##KIM\n",
         "Now it's your turn to apply classification techniques."
       ]
     },
@@ -1878,7 +1878,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "-KEqB1pn2u2C",
         "colab": {
@@ -1983,7 +1983,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "ltOetkB02u2C",
         "colab": {
@@ -2057,7 +2057,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "VhOvtTQ-2u2D",
         "colab": {
